# fastapi_demo

./: pyproject.toml
fastapi_demo/: main.py
fastapi_demo/sql_app/: crud.py  models.py  schemas.py
