[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["adriennefranke <18449966+adriennefranke@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
SQLAlchemy = "^1.3.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
